# macrofactor-influx

./: .env.example  Cargo.toml  Dockerfile  README.md  crontab
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker.yml
src/: main.rs
