[package]
name = "macrofactor-influx"
version = "0.1.0"
edition = "2024"

[dependencies]
macro-factor-api = "0.4.0"
influxdb2 = "0.5"
influxdb2-structmap = "0.2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
anyhow = "1"
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"
dotenvy = "0.15"
